chamber/styles/base.css
@import url('https://fonts.googleapis.com/css2?family=Jersey+20+Charted&family=Lugrasimo&display=swap');

body{
    font-family: "Lugrasimo";
}

.header{
    /* background-color: #1d4d72;
    display: flex;
    align-items: center;
    max-width: 90%;
    max-height: 50px;
    margin: 0 auto; */
    display: flex;
    align-items: center;
    max-height: 50px;
}

.heading{
    flex: 1;
    font-size: 3vw;
    margin: 0;
    overflow: hidden;
    white-space: nowrap;
}

img.logo{
    max-width: 50px;
    max-height: 50px;
    border: solid black;
    border-radius: 10px;
    margin: auto;
    padding: 0;
}

body{
    margin: 0 auto;
    max-width: 100%;
}

#menu{
    display: block;
    font-size: 2rem;
    font-weight: 700;
    text-decoration: none;
    text-align: left;
    padding: .5rem .75rem;
    background-color: black;
    color: #eee;
    max-width: 90%;
    margin: 0 auto;
}

#menu::before{
    content: "\2261"; 
}

nav{
    background-color: black;
    margin: auto;
    max-width: 90%;
    
}

.navigation{
    list-style: none;
    margin: 0 auto;
    max-width: 600px;
}

.navigation li{
    display: none;
}

.navigation a{
    display: block;
    padding: .75rem;
    text-align: left;
    text-decoration: none;
    color: white;
    font-weight: 700;
    transition: 0.5s;
    font-size: clamp(1rem, 2vmin, 1.5rem);
}

.navigation a:hover, .navigation a:active{
    color: rgb(124, 24, 74);
    background-color: skyblue;
}

nav ul li a.active::before{
    content: "🌠";
}

.show li{
    display: block;
}

#menu.show::before{
    content: "x";

}

nav ul {
    list-style-type: none;
}

nav a{
    display: block;
    color: white;
    text-align: center;
    padding: 1rem;
    text-decoration: none;
}

nav a:hover {
    border: 1px solid white;
}

.active{
    color: yellow;
}

main{
    margin: auto;
    max-width: 80%;
    align-self: center;
}

h2{
    margin: 0 auto;
    text-align: center;
    border-bottom: solid lightgray;
    padding-top: 2rem;
    margin-bottom: 1rem;
    grid-column-start: 1;
    grid-column-end: 3;
}

.card{
    border: solid lightgray;
    border-radius: .5em;
    margin-bottom: 20px;
    box-shadow: 0px 0px 10px darkgray;
    
}

h3{
    margin-top: 0;
    border-top-left-radius: .25em;
    border-top-right-radius: .25em;
    background-color: #1d4d72;
    color: white;
    text-align: center;
    padding: 1rem;
}

.card ul a{
    color: blue;
    text-decoration: underline;
}

h5{
    text-align: center;
}

footer{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    background-color: var(--paragraph-background-color);
    margin: 0 auto;
    max-width: 90%;
    max-height: 100px;
}

p{
    color: white;
    text-align: center;
    padding-top: 20px;
    font-size: .75em;
}

.designHead{
    display: block;
}

.principles{
    font-size: 3vw;
    padding-top: 15px;
    /* padding-bottom: -10px; */
}

.name{
    font-size: 2vw;
    /* padding-top: -10px; */
    padding-bottom: 15px;
}

iframe{
    display: block;
    margin: 0 auto;
    width: 80%;
    height: 100%
    
}

:root {
  --primary-color: #14814c   ;
  --secondary-color: #5993f1 ;
  --accent1-color: #ea6456;
  --accent2-color: #b96e6e;

  --heading-font: Lugrasimo;
  --paragraph-font: "Jersey 20 Charted", sans-serif;

  --headline-color-on-white: #14814c;
  --headline-color-on-color: #ea6456;  
  --paragraph-color-on-white: #14814c; 
  --paragraph-color-on-color: #0b0c0e;  
  --paragraph-background-color: #83f1bc  ;
  --nav-link-color: #115836;
  --nav-background-color: #ea6456;
  --nav-hover-link-color: #14814c;
  --nav-hover-background-color: #b96e6e;
  --back: rgb(0, 0, 0);
  --back2: hsla(0, 0%, 0%, 0.5);
  --foredark: hsla(0,0%,10%,1);
	--forelight: hsla(0,0%,100%,1);
	--border: hsla(0,0%,20%,.8);
	--borderlight: hsla(0,0%,33%,.3);
	--shadow: hsl(0,0%,50%);
	--zebra: hsl(0, 0%, 93%, 1);
}

body {
  max-width: 960px;
  margin: 0 auto;
  padding: 4em;
  font-size: 18px;
  text-align: center;
}
img {
  display: block;
  width: stretch;
  width: 100%;
  justify-self: center;
  align-items: center;
  max-height: 250px;
  margin: 0 auto;
  max-width: 300px;
}
h1, h2, h3, h4, h5, h6 {
  font-family: var(--heading-font);
  color: var(--headline-color-on-white);
}
h2 {
  text-align: center;
}
hr {
  height: 3px;
  margin: 35px 0;
  background: var(--accent1-color);
}
header {
  padding: 1em;
  text-align: center;
  color: var(--headline-color-on-color);
  background-color: var(--paragraph-background-color);
}
header > h1, header > h2 {
  color: var(--headline-color-on-color);
}
p {
  font-family: var(--paragraph-font);
  color: var(--paragraph-color-on-white);
  padding: 1em;
}
.colors {
  width: 100%;
  min-width: 350px;
  margin: 30px auto;
  text-align: center;
}
.colors th {
  background-color: #999;
}
.colors td{
  width: 25%;
  height: 3em;
}
.primary {
  background-color: var(--primary-color);
}
.secondary {
  background-color: var(--secondary-color);
}
.accent1 {
  background-color: var(--accent1-color);
}
.accent2{
  background-color: var(--accent2-color);
}
p.colored {
  background-color: var(--paragraph-background-color);
  color: var(--paragraph-color-on-color);
}

#hero-img{
    width: 100%;
    margin: auto;
    justify-self: center;
    border: solid black;
    border-radius: 15px;
    padding: 0px;
    display: block;
}

#facebook{
    max-width: 50px;
    max-height: 50px;
    padding: 5px;
}
#twitter{
    max-width: 50px;
    max-height: 50px;
    padding: 5px;
}
.social{
    display: flex;
    justify-content: center;
    grid-column-start: 3;
    grid-column-end: 4;
    /* grid-row-start: 1;
    grid-row-end: 2; */
}
#siteplanlink{
    grid-column-start: 1;
    grid-column-end: 2;
    /* grid-row-start: 0;
    grid-row-end: 0; */
    padding: 0;
    margin: 0 auto;
}
#contactuslink{
    grid-column-start: 1;
    grid-column-end: 2;
    /* grid-row-start: 1;
    grid-row-end: 1; */
    padding: 0;
    margin: 0 auto;
}
#authorinfo{
    display: flex;
    padding: 0;
    margin: 0 auto;
    grid-column-start: 2;
    grid-column-end: 3;
}
#year{
    padding: 0;
    margin: 0 auto;
    grid-column-start: 2;
    grid-column-end: 3;
    grid-row: span 1;
}
#lastModified{
    color: var(--accent1-color);
    padding: 0;
    margin: 0 auto;
    grid-column-start: 1;
    grid-column-end: 4;
}

a.join-button:hover{
    background-color: yellow;
}

.join-button {
    position: absolute;
    margin-right: -0.9vw;
    top: 40%;
    left: 45%;
    transform: translate(-50%, -50%);
    padding: 1vw 2vw;
    background-color: rgb(157, 194, 176);
    border: solid #115836;
    color: #1d4d72;
    text-align: center;
    text-decoration: none;
    font-weight: bolder;
    font-size: 3vw;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    transition: background-color 0.3s ease;
}

.spotlight-card{
    display: block;
    margin: 0 auto;
}

div#temp {
    padding: 10px;
    display: inline-flex;
}

img#icon {
    float: left;
    padding-left: 20px;
}

div#description {
    display: inline-flex;
}

div#wind {
    font-size: 2vw;
}

div#humidity {
    font-size: 2vw;
}

label{
    font-size: 1.5vw;
    display: inline-grid;
    width: fit-content;
}

p#upcoming-events{
    font-weight: bold;
}

#darkModeToggle {
	position: fixed;
	top: 1rem;
	right: 1rem;
	font-size: 3rem;
	cursor: pointer;
	font-size: 1.5rem;
}

.dark-mode {
	background-color: #000;
	color: #fff;
	border-color: #eee; 
}

#city-id{
    display: flex;
    justify-content: center;
    text-align: center;
    font-weight: bold;
}

.wf1{
    display: flex;
    justify-content: center;
    align-items: center;
}

.joinform{
    display: block;
    justify-content: center;
    align-items: center;
    width: 100vw;
    justify-self: center;
    margin: .5em auto;
    padding: .9em;
    background-color: #b96e6e;
    border-radius: 4px;
}

#signup{
    display: block;
    width: 100%;
    margin: auto;
}

#membership-level{
    display: flex;
    justify-content: left;
    padding-top: 10px;
    text-decoration: underline;
    font-size: 1em;
}

.membership{
    display: block;
    padding-top: .2rem;
    font-size: .9rem;
}

.joinform input[type="radio"]{
    display: inline-block;
    margin-right: 6px;
    padding: 1.5em;
    vertical-align: middle;
}

.joinform input[type="text"],
.joinform input[type="tel"],
.joinform input[type="email"],
#description
{
    background-color: #f1dbdb;
    display: flex;
    border: solid 1px #999;
    border-radius: 6px;
    padding: .75rem;
    color: #555;
    width: 200px;
    appearance: none;
}

.floating-box {
    display: none;
    position: relative;
    align-content: center;
    justify-content: center;
    text-align: left;
    top: 50%;
    left: 50%;
    transform: translate(-50%);
    width: fit-content;
    height: fit-content;
    background-color: #f0f0f0;
    border: 1px solid #ccc;
    padding: 10px;
}

span{
    display: block;
    align-content: center;
    text-align: center;
    font-weight: bold;
    
}

li{
    font-family: serif;
}

.discover{
    display: grid;
    grid-template-columns: .5fr 2fr;
    grid-gap: 10px;
}

.headline{
    grid-column: span 2;
}

.headline h2{
    margin: 10px 0px 0px 0px;
    text-shadow: 2px 2px 4px;
}

.headline p{
    font-family: serif;
    font-size: 1.25em;
    margin: 0;
    padding: 0;
    font-weight: bold;
}

.sidebar{
    background-color: #f0f0f0;
    padding: 10px;
    margin: 10px;
    width: 100%;
}

.photos{
    margin: 10px;
    overflow: hidden;
    font-size: 2vw;
}

.photos img{
    display: block;
    /* width: fit-content; */
    height: auto;
}

.discover .card{
    display: flex;
    /* grid-column-start: 1 span 1; */
}

.card h2{
    text-align: center;
    font-size: 2vw;
}

#monthly{
    font-size: .5em;
}

.card a{
    display: block;
    font-size: .5em;
    overflow: hidden;

}

img#icon {
    float: left;
    width: max-content;
}

#memberCards img{
    width: 25%;
}

#memberCards #address{
    margin: 0 auto;
    padding: 0;
}

#memberCards #phone{
    margin: 0 auto;
    padding: 0;
}

#memberCards #website{
    margin: 0 auto;
    padding: 0;
}

#memberCards #level{
    margin: 0 auto;
    padding: 0;
}

table {
	margin: 10px auto;
	border: thin solid var(--border);
	box-shadow: 0 0 10px var(--shadow);
	border-collapse: collapse;
}

caption {
  padding: 10px;
  caption-side: bottom;
	color: var(--back);
	font-size: .85rem;
}

tr:first-child th, .highlight {
	background-color: var(--back);
	color: var(--forelight);
}

th, td {
	padding: 7px 15px;
	border: 1px solid var(--borderlight);
}

th {
	background-color: var(--back2);
	font-size: larger;
}

td {
	text-align: center;
}

tbody tr:nth-child(even) {
	background-color: var(--zebra);
}

thead tr:nth-child(even) {
	background-color: var(--zebra);
    color: white;
}

#leading-cell{
    background-color: black;
}

#toggleButton{
    margin-left: 30%;
    margin-top: 20px;
    margin-bottom: 20px;
    padding: 10px;
    align-items: center;
    display: block;
    border: solid red;
    border-radius: 5px;
}

#banner {
    background-color: rgba(0, 0, 0, 0.5);
    color: white;
    padding: 20px;
    position: relative;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 1000;
}


#closeButton {
    background-color: transparent;
    border: none;
    color: white;
    cursor: pointer;
    padding: 10px;
    position: absolute;
    top: 0px;
    right: 0px;
}

@media screen and (min-width: 600px){
    .photos img:hover{
        box-shadow: 0 0 50px #333;
        border: 1px solid rgba(0,0,0,.3);
        padding: 1px;
    }

    #memberCards{
        display: grid;
        grid-template-columns: 1fr 1fr 1fr;
        max-width: 80%;
        max-height: 50%;
    }
}

@media screen and (max-width: 600px){
    .discover{
        grid-template-columns: 1fr;
    }
    .photos img{
        display: flex;
    }
    figcaption{
        display: none;
    }
    
}

